# shapemap-tools

./: README.md  conda-env.yml  setup.cfg
example/decrypted/: pipeline.sh
example/decrypted/config/: decrypted-RIBOSAM_config.yaml  decrypted-RIBOSAM_samples.tsv  decrypted-SAMAP_config.yaml  decrypted-SAMAP_samples.tsv
misc/previous_scripts/: run.inc.sh  template_config_script.sh
shapemap/: aggregate_replicates.py  demultiplex.py  gen_structures.py  normalize_by_conditions.py
shapemap_tools/: aggregate_replicates.py  demultiplex.py  fasta.py  footprint.py  gen_deltashape.py  gen_structures.py  gentag.py  launch_shapemapper.py  normalize_by_conditions.py  plot_aggregate.py  quality_control.py  quality_control_compare.py  qualitycontrol_compare_report.ipynb  qualitycontrol_report.ipynb  results_viewer.ipynb  results_viewer.py  structural_comparison.py  utils.py
shapemap_tools/resources/: barcodes-10bp-4dist-ashlock.fasta  barcodes-10bp-4dist-ashlock.txt  barcodes-10bp-5dist-ashlock.fasta  barcodes-10bp-5dist-ashlock.txt
shapemap_tools/template/: config.yaml  ipanemap-config.yaml  samples.tsv
