[metadata]
name = shapemap-tools
version = 0.0.1

[options]
install_requires =
    ruamel.yaml
    fire
    pandas
    numpy
    matplotlib
# bbmap
# fastq-multx
packages=find:
[options.entry_points]
console_scripts =
    shpm_agg_replicates = shapemap_tools.aggregate_replicates:main
    shpm_norm_by_conditions = shapemap_tools.normalize_by_conditions:main
    shpm_gen_structures = shapemap_tools.gen_structures:main
    shpm_demultiplex = shapemap_tools.demultiplex:main
	shpm_launch_shapemapper = shapemap_tools.launch_shapemapper:main
