[metadata]
name = shapemap-tools
version = 0.0.1

[options]
install_requires =
    ruamel.yaml
    fire
    pandas
    numpy<=1.26.4
    matplotlib
    seaborn<=0.12
    scipy<=1.13.1
    cutadapt
    scikit-bio
    jupyter
    voila
    parse
    tqdm
# bbmap
# fastq-multx
packages=find:
[options.entry_points]
console_scripts =
    shpm_agg_replicates = shapemap_tools.aggregate_replicates:main
    shpm_plot_aggregate = shapemap_tools.plot_aggregate:main
	shpm_footprint = shapemap_tools.footprint:main
    shpm_norm_by_conditions = shapemap_tools.normalize_by_conditions:main_wrapper
    shpm_gen_structures = shapemap_tools.gen_structures:main
    shpm_demultiplex = shapemap_tools.demultiplex:main
	shpm_launch_shapemapper = shapemap_tools.launch_shapemapper:main
    shpm_quality_control = shapemap_tools.quality_control:main
    shpm_quality_control_compare = shapemap_tools.quality_control_compare:main
    shpm_results_viewer = shapemap_tools.results_viewer:main
    shpm_gentag = shapemap_tools.gentag:main_wrapper
    shpm_comparison = shapemap_tools.structural_comparison:main
